--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <title>Game of Life</title>
-    <link rel="stylesheet" type="text/css" href="../main_stylesheet.css"/>
     <link rel="stylesheet" type="text/css" href="styles.css"/>
     <script src="./js/p5.js"></script>
     <script src="./js/game.js"></script>
@@ -54,7 +53,7 @@
     <div class="butoane">
         <button class="button" onclick="startGame()">Start</button>
         <button class="button" onclick="stopGame()">Stop</button>
-        <button class="button" onclick="clr_grid()">Clear</button>
+        <button class="button" onclick="clear_grid()">Clear</button>
         <button class="button" onclick="random_set()">Rand</button>
     </div>
 
